[FOLLOWUP][BUGFIX] Add padding to items in tree
The padding must not be added to .list-tree-group.
Otherwise there is too much padding between the key
and equal sign in the TypoScript Object Browser.

Releases: master
Resolves: #68244
Reviewed-on: http://review.typo3.org/42008
Tested-by: Daniel Goerz <ervaude@gmail.com>
Tested-by: Markus Klein <markus.klein@typo3.org>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -10869,8 +10869,8 @@ div.t3-form-field-container:first-child .t3-form-field-label-flex {
   line-height: 1.75em;
   position: relative;
 }
-.list-tree li .list-tree-group {
-  padding-right: 15px;
+.list-tree li .list-tree-group > .pull-right {
+  padding-left: 15px;
 }
 .list-tree li.active > .list-tree-group,
 .list-tree li.active > .list-tree-group a {
